--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
